--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <img id="imgMeme" src=""/>
+        <img id="imgMeme" src="img/meme02.jpg"/>
         <button onclick="gerarMeme()">Gerar</button>
         <button onclick="compartilharMeme()">Compartilhar</button>
 
